--- a/README
+++ b/README
@@ -1,15 +1,3 @@
-EchoBoard
-
-README coming soon!
+Serene is a lightweight PHP framework that I'm developing for my own use (and as an educational experience).
 
 
-The database:
-Create a database with the name EchoBoard (or something else, you can change in the config)
-Create table `users` with rows:
- `id` - type: int(128) - make this the primary key, and allow it to AUTO_INCREMENT
- `username` - type: varchar(128)
- `password` - type: varchar(128)
- `email` - type: varchar (128) 
-
-License: Creative Commons
-	
